--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,9 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+/* -- Custom Styles for Front Page Title -- */
+.page__title {
+  color: #000000;         /* Change this to your desired color */
+  font-size: 2.5em !important; /* Change this to your desired size */
+}
